# log2rotate

./: Makefile  README  log2rotate.cabal  log2rotate.lhs
